# pwgallery

./: .gitignore  Makefile.am  autogen.sh  configure.ac  gwebgallery2pwgallery.pl
debian/: changelog  control  copyright  pwgallery.install  rules
src/: Makefile.am  callbacks.c  callbacks.h  configrc.c  configrc.h  exif.c  exif.h  gallery.c  gallery.h  html.c  html.h  image.c  image.h  magick.c  magick.h  main.c  main.h  vfs.c  vfs.h  widgets.c  widgets.h  xml.c  xml.h
src/glade/: callbacks.h  interface.c  interface.h  pwgallery.glade  pwgallery.gladep  pwgallery.ui
templates/: Makefile.am  pwg_image.html  pwg_index.html  pwg_indeximg.html
